syntax = "proto3";

package order;

option go_package = "order-service/proto";

// Сервис для управления заказами
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (OrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
}

// Сообщения для заказов
message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
  string status = 5;
  string created_at = 6;
  string updated_at = 7;
}

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double price = 4;
}

// Запросы и ответы
message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
}

message GetOrderRequest {
  string id = 1;
}

message UpdateOrderRequest {
  string id = 1;
  string status = 2;
}

message DeleteOrderRequest {
  string id = 1;
}

message GetOrdersRequest {
  int32 page = 1;
  int32 limit = 2;
  string user_id = 3;
}

message OrderResponse {
  Order order = 1;
}

message DeleteOrderResponse {
  bool success = 1;
  string message = 2;
}

message GetOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
} 